<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PlantCare</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login">Sign in</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="login">Login</string>
    <string name="textView">TextView</string>
    <string name="plant_care">Plant Care</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="name">Name</string>
    <string name="family_name">Family Name</string>
    <string name="register" tools:ignore="ExtraTranslation">Register</string>
    <string name="skip">Skip</string>
    <string name="add_plant">Add Plant</string>
    <string name="agenda">Agenda</string>
    <string name="my_plants">My Plants</string>
    <string name="dirk">Dirk</string>
    <string name="rose">Rose</string>
    <string name="your_plant_is_thirsty_every_days">Your plant is thirsty every ... (days)</string>
    <string name="done">Done</string>
    <string name="select_date">Select date</string>
    <string name="nickname">Nickname</string>
    <string name="species">Species</string>
    <string name="planting_day">Planting day</string>
</resources>
